--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "supabase-example",
+  "name": "records",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@supabase/supabase-js": "^1.30.4",
+    "@supabase/supabase-js": "^1.30.7",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "dotenv": "^16.0.0",
-    "i18n": "^0.14.2",
-    "i18next": "^21.6.14",
+    "i18n": "^0.14.1",
+    "i18next": "^21.6.12",
     "i18next-browser-languagedetector": "^6.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.5",
     "react-scripts": "5.0.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
